objects/HealthCloudGA__HL7ParserMapping__mdt.object
<CustomObject>
    <description>Specifies which Apex class is used to parse each type of HL7 segment</description>
    <fields>
        <fullName>HealthCloudGA__EntityName__c</fullName>
        <label>Entity Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ParserName__c</fullName>
        <inlineHelpText>Apex class name to be used to parse</inlineHelpText>
        <label>Parser Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReceivingApplication__c</fullName>
        <label>Receiving Application</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ReceivingFacility__c</fullName>
        <label>Receiving Facility</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SendingApplication__c</fullName>
        <label>Sending Application</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SendingFacility__c</fullName>
        <label>Sending Facility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Version__c</fullName>
        <label>Version</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>HL7 Parser Mapping</label>
    <pluralLabel>HL7 Parser Mappings</pluralLabel>
</CustomObject>